# mesop-markdown-ai

./: pyproject.toml
src/: main.py  settings.py  style.py
